# owl-eval

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.ts  docker-compose.yml  vercel.json
eval/: .gitignore  Concepts.md  FULL_README.md  README.md  SUMMARY.md  TODO.md  evalctl  example_usage.py  owl_eval.py  package-lock.json  package.json  prisma  pyproject.toml  requirements.txt  setup-gcp-wif.md  setup-precommit-hooks.sh  setup.py
eval/.github/workflows/: ci.yml  deploy-gcp.yml
eval/analysis/: analyzer.py
eval/cli/: __init__.py  experiments.py  postgres.py  testdata.py  tigris.py
eval/evaluation/: ab_testing.py  test_scenarios.py
eval/frontend/: .dockerignore  .env.local.example  .env.local.testing  Dockerfile  README.md  jest.config.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  test-build.sh
eval/frontend/docs/: PROLIFIC_INTEGRATION.md
eval/frontend/prisma/: schema.prisma
eval/frontend/public/: .gitkeep
eval/frontend/scripts/: copy-bucket-files.js  migrate-to-multitenancy.js  set-bucket-cors.js  set-bucket-policy.js  upload-videos.js
eval/frontend/src/: stack.tsx
eval/frontend/src/__tests__/lib/: database-retry.test.ts  (+3 more)
eval/frontend/src/app/: globals.css  layout.tsx  page.tsx
eval/frontend/src/components/: navigation.tsx  organization-switcher.tsx  scenario-selector.tsx  video-upload.tsx
eval/frontend/src/lib/: auth-middleware.ts  config.ts  experiment-service.ts  organization-context.tsx  organization-flow.ts  organization.ts  prisma.ts  scenarios.ts  screening-config.ts  stack-auth-sync.ts  storage.ts
eval/frontend/src/types/: index.ts
eval/models/: model_loader.py
eval/prolific/: client.py  integration.py
eval/scripts/: README.md  analyze_results.py  auth.ts  cli-organization.ts  cli.py  db-manage.ts  evalctl.ts  experiment-cli.ts  owl_eval.py  prolific_cli.py  stack-auth-sync-cli.ts  storage-manage.ts  video-manage.ts
eval/scripts/python/: experiments.py  postgres.py  testdata.py  tigris.py
(+194 files in other folders)
