[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "owl-eval"
version = "0.1.0"
description = "World Model Evaluation Harness CLI"
readme = "CLI_README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Owl Eval Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.26.0",
    "tabulate>=0.9.0",
    "pyyaml>=6.0.0",
    "numpy>=1.21.0",
    "imageio>=2.22.0",
    "imageio-ffmpeg>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "pytest>=7.0.0",
]

[project.scripts]
owl-eval = "owl_eval:owl_eval"

[project.urls]
Homepage = "https://github.com/your-org/owl-eval"
Repository = "https://github.com/your-org/owl-eval"
Documentation = "https://github.com/your-org/owl-eval/blob/main/CLI_README.md"

[tool.setuptools]
py-modules = ["owl_eval"]
packages = ["cli", "evaluation", "models", "analysis", "prolific"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | frontend
  | deprecated
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["frontend/*"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "frontend", "build", "dist"]